fix: z-index 수정

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -282,7 +282,7 @@
   left: 50%;
   transform: translateX(-50%);
   max-width: none;
-  z-index: 1;
+  z-index: 2;
 }
 .sc-beginning .ufo {
   left: 1282px;
